Rename some variables

--- a/naunet/examples/primordial/test/CMakeLists.txt
+++ b/naunet/examples/primordial/test/CMakeLists.txt
@@ -75,7 +75,7 @@ if(MAKE_PYTHON)
                 test_pymodule
             COMMAND
                 ${CMAKE_COMMAND} -E env 
-                    CHEMISTRY_MODULE_PATH=$<TARGET_FILE_DIR:${PYMODNAME}>
+                    PYNAUNET_PATH=$<TARGET_FILE_DIR:${PYMODNAME}>
                     NAUNET_CONFIG_PATH=${CMAKE_SOURCE_DIR}
                 ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/test.py
         )
