--- a/naunet/examples/empty/test/test.py.in
+++ b/naunet/examples/empty/test/test.py.in
@@ -1,6 +1,6 @@
 import os
 import sys
-sys.path.append(os.getenv('CHEMISTRY_MODULE_PATH'))
+sys.path.append(os.getenv('PYNAUNET_PATH'))
 
 import numpy as np
 from tomlkit.toml_file import TOMLFile
