--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -44,7 +44,7 @@ jobs:
         run: poetry install
 
       - name: Pytest
-        run: poetry run pytest -rs -o log_cli=true -o log_cli_level=DEBUG --runslow test
+        run: poetry run pytest -rs -o log_cli=true -o log_cli_level=DEBUG --runslow tests
 
       - name: Install package
         run: pip install .
