--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "naunet"
-version = "0.3.0"
+version = "0.4.0"
 description = ""
 authors = ["Chia-Jung Hsu <appolloford@gmail.com>"]
 license = "GPL-3.0-or-later"
@@ -22,6 +22,7 @@ numpy = "^1.20.3"
 mkdocstrings-python = "^0.6.5"
 mkdocs-material = "^8.2.5"
 pre-commit = "^2.18.1"
+ipykernel = "^6.13.0"
 
 [tool.poetry.scripts]
 naunet = "naunet.console:main"
