--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -22,7 +22,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-20.04, ubuntu-latest]
-        cuda: ["11.0.3", "12.1.0"]
+        cuda: ["11.7.0", "12.1.0"]
         python: [3.8, 3.9]
         boost: [1.71, 1.74]
 
@@ -92,6 +92,7 @@ jobs:
         id: cuda-toolkit
         with:
           cuda: ${{ matrix.cuda }}
+          method: "network"
 
       - run: |
           echo "Installed cuda version is: ${{steps.cuda-toolkit.outputs.cuda}}"
