--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,22 +7,20 @@ license = "GPL-3.0-or-later"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-cleo = "^0.8.1"
-Jinja2 = "^2.11.2"
 tomlkit = "^0.7.0"
+cleo = "^0.8.1"
+Jinja2 = "^3.0.0"
 tqdm = "^4.58.0"
-lark = "^0.11.1"
-MarkupSafe = "2.0.1"
+lark = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
-pytest = "^6.2.0"
-coverage = "^5.4"
-black = {version = "^20.8b1", allow-prereleases = true}
+black = "^23.12.1"
+pytest = "^7.4.4"
+coverage = "^7.4.0"
 numpy = "^1.20.3"
-mkdocstrings-python = "^0.6.5"
-mkdocs-material = "^8.2.5"
+mkdocstrings-python = "^1.7.5"
+mkdocs-material = "^9.5.3"
 pre-commit = "^2.18.1"
-ipykernel = "^6.13.0"
 
 [tool.poetry.scripts]
 naunet = "naunet.console:main"
