--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,17 +7,17 @@ license = "GPL-3.0-or-later"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-tomlkit = "^0.7.0"
+tomlkit = "^0.11.4"
 cleo = "^2.0.1"
 Jinja2 = "^3.0.0"
-tqdm = "^4.58.0"
+tqdm = "*"
 lark = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
-black = "^23.12.1"
-pytest = "^7.4.4"
+black = "*"
+pytest = "*"
 coverage = "^7.4.0"
-numpy = "^1.20.3"
+numpy = "*"
 mkdocstrings-python = "^1.7.5"
 mkdocs-material = "^9.5.3"
 pre-commit = "*"
