--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -21,13 +21,15 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04, ubuntu-latest]
+        os: [ubuntu-20.04, ubuntu-22.04, ubuntu-24.04]
         cuda: ["11.7.0", "12.1.0"]
         python: [3.8, 3.9]
         boost: [1.71, 1.74]
 
         exclude:
-          - os: ubuntu-latest
+          - os: ubuntu-24.04
+            boost: 1.71
+          - os: ubuntu-22.04
             boost: 1.71
           - os: ubuntu-20.04
             boost: 1.74
@@ -44,6 +46,9 @@ jobs:
 
       - name: Install BLAS & LAPACK
         run: sudo apt-get install libblas-dev liblapack-dev
+
+      - name: Install pybind11
+        run: sudo apt-get install pybind11-dev
 
       - name: Cache boost
         uses: actions/cache@v3
